// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dropping tables with  FKs in postgres schema generator removes stale FKs on target table dropping 1 1`] = `
"alter table \\"book\\" drop constraint \\"book_author1_id_foreign\\";
alter table \\"book\\" drop constraint \\"book_author2_id_foreign\\";

alter table \\"author\\" drop constraint \\"author_pkey\\";
alter table \\"author\\" rename column \\"id\\" to \\"pk\\";
alter table \\"author\\" add constraint \\"author_pkey\\" primary key (\\"pk\\");

alter table \\"book\\" add constraint \\"book_author1_id_foreign\\" foreign key (\\"author1_id\\") references \\"author\\" (\\"pk\\") on update cascade;
alter table \\"book\\" add constraint \\"book_author2_id_foreign\\" foreign key (\\"author2_id\\") references \\"author\\" (\\"pk\\") on update cascade;

"
`;

exports[`dropping tables with  FKs in postgres schema generator removes stale FKs on target table dropping 1 2`] = `
"alter table \\"book\\" drop constraint \\"book_author1_id_foreign\\";
alter table \\"book\\" drop constraint \\"book_author2_id_foreign\\";

alter table \\"book\\" add column \\"author1_pk\\" int not null, add column \\"author2_pk\\" int not null;
alter table \\"book\\" add constraint \\"book_author1_pk_foreign\\" foreign key (\\"author1_pk\\") references \\"author\\" (\\"pk\\") on update cascade;
alter table \\"book\\" add constraint \\"book_author2_pk_foreign\\" foreign key (\\"author2_pk\\") references \\"author\\" (\\"pk\\") on update cascade;
alter table \\"book\\" drop column \\"author1_id\\";
alter table \\"book\\" drop column \\"author2_id\\";

"
`;

exports[`dropping tables with  FKs in postgres schema generator removes stale FKs on target table dropping 1 3`] = `
"alter table \\"book\\" drop constraint \\"book_author2_pk_foreign\\";
alter table \\"book\\" drop constraint \\"book_based_on_id_foreign\\";

alter table \\"book\\" drop column \\"based_on_id\\";
alter table \\"book\\" drop column \\"author2_pk\\";

"
`;

exports[`dropping tables with  FKs in postgres schema generator removes stale FKs on target table dropping 2 1`] = `
"alter table \\"book\\" drop constraint \\"book_author1_id_foreign\\";

alter table \\"book\\" drop constraint \\"book_author2_id_foreign\\";

drop table if exists \\"author\\" cascade;

alter table \\"book\\" drop constraint \\"book_based_on_id_foreign\\";

alter table \\"book\\" drop column \\"author2_id\\";
alter table \\"book\\" drop column \\"based_on_id\\";

"
`;
